--- a/MMurals/Info.plist
+++ b/MMurals/Info.plist
@@ -50,7 +50,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>We will use your Location in order to show you best visit to do in Montréal</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Please give us access to your localisation when this app is in use</string>
 </dict>
 </plist>
